DTSCCI-5423: add service code to find location